--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   path_provider: ^2.1.3
   open_file: ^3.3.2
   intl: ^0.19.0
+  flutter_pdfview: ^1.3.2
+  signature: ^5.5.0
 
 dev_dependencies:
   flutter_test:
