--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   pdf: ^3.11.0
   path_provider: ^2.1.3
-  open_file: ^3.3.2
-  intl: ^0.19.0
+#  open_file: ^3.3.2
   flutter_pdfview: ^1.3.2
   signature: ^5.5.0
 
